--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,14 @@
-html{
-    background-image: url('../images/foodies.jpg'); 
+html{ 
     height:100%; 
+    background-image:url('../images/foodies.jpg')
 }
 
+#background{
+    background-image: url('../images/fruits-and-vegetables.jpg');
+    position: absolute;
+    width: 100%;
+    height:100%; 
+}
 body{
     height:100%; 
     background-color:transparent !important;  
@@ -69,4 +75,27 @@ body{
      bottom:0;
      background-color:rgb(214, 110, 110); 
      width:100%; 
+ }
+
+ #signInBody{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    margin-top: 18%;
+    background-color: white;
+    width: 30%;
+    left: 35%;
+    padding: 20px;
+    border-radius: 8px;
+
+ }
+
+ #signInJumbo{
+     justify-content: center;
+     display:flex;
+     width: 60%;
+     left: 20%;
+     right: 20%;
+     top: 10%;
+     bottom: auto;
  }
