--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@
     z-index: -1;
 }
 
+
 #backgroundSearch{
     background-image: url('../images/brad.png');
     position: absolute;
@@ -66,6 +67,11 @@ height:100%
 
 }
 
+#searchBar{
+    padding: 20px 60px;
+    
+}
+
 .container-fluid{
     padding:0px !important;
 }
@@ -88,12 +94,28 @@ height:100%
     
     
 }
+#flex{
+    display: flex;
+    justify-content: center;
+}
+
 body{
     min-width:1300px !important;        
     width: auto !important;  
     width:1300px !important;           
  }
 
+ #search{
+  
+     display: inline-flex;
+     margin-top: 15%;
+     position: absolute; 
+ }
+
+ #randomButton{
+    margin-right: -100px;
+    margin-left: 14px;
+ }
  .page-footer{
      position: absolute;
      bottom:0;
