--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,11 @@
     z-index: -1;
 }
 
+#searchContainer{
+    overflow: auto;
+    margin-bottom: 41px;
+}
+
 
 #backgroundSearch{
     background-image: url('../images/brad.png');
@@ -120,7 +125,7 @@ body{
  }
  .page-footer{
      position: fixed;
-     bottom:0;
+     bottom:0px;
      background-color:rgb(214, 110, 110); 
      width:100%; 
  }
@@ -170,3 +175,4 @@ body{
         background-color: beige;
     
     }
+
